benchmark/fortio-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortio-server
spec:
  ports:
    - name: http-port
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: https-port
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: http2-grpc
      port: 8079
      protocol: TCP
      targetPort: 8079
    - name: tcp
      port: 8078
      protocol: TCP
      targetPort: 8078
  selector:
    app: fortio-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-server-v1
  labels:
    app: fortio-server
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio-server
      version: v1
  template:
    metadata:
      labels:
        app: fortio-server
        version: v1
    spec:
      serviceAccountName: test-fortio-server
      containers:
      - name: fortio-server
        image: fortio/fortio:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http-port
        - containerPort: 8078
          name: tcp-port
        - containerPort: 8079
          name: grpc-port
        - containerPort: 8081
          name: https-port
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        securityContext:
          runAsUser: 1000
        command:
          - fortio
          - server
      volumes:
      - name: tmp
        emptyDir: {}
